# rust-webgl-sample

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package.json  script.js  webpack.config.js
pkg/: package.json  webgl.d.ts  webgl.js  webgl_bg.wasm  webgl_bg.wasm.d.ts
src/: lib.rs  mat_4.rs  shapes.rs  webgl.rs
src/shader/: fragment.frag  vertex.vert
